@@ -1,5 +1,11 @@
 2014-03-15  Ramon Casero  <rcasero@gmail.com>
 
+	* matlab/PointsToolbox/cons_smacof_pip.m: (0.3.3)
+
+	- As the stress can go up and down, now the algorithm remembers
+	the best solution is has found among all iterations, and will
+	return that one.
+
 	* matlab/ManifoldToolbox/tri_ccqp_smacof_nofold_sph_pip.m: (0.1.3)
 
 	- I forgot to commit the changes to this function when I fixed the
